--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "php.validate.executablePath": "C:/XAMPP/php/php.exe"
+    "php.validate.executablePath": "C:/XAMPP/php/php.exe",
+    "liveServer.settings.port": 5501
 }
